# plant-monitoring-system

./: .gitignore  README.md  docker-compose.yml  initial-tables.sql
app/: initial-tables.sql  pom.xml
app/src/main/java/iot/pot/: Config.java  PotApplication.java
app/src/test/java/iot/pot/: PotApplicationTests.java
backend/: Dockerfile  pom.xml
backend/src/main/java/iot/pot/: Config.java  PotApplication.java
esp/smart-pot/: partitions.csv  sdkconfig  sdkconfig.old
esp/smart-pot/components/bme280/: CMakeLists.txt  bme280.c  platform_i2c.c
esp/smart-pot/components/bme280/include/: bme280.h  platform_i2c.h
esp/smart-pot/main/: CMakeLists.txt  bme280_sensor.c  bme280_sensor.h  globals.h  light_sensor.c  light_sensor.h  main.c  moisture_sensor.c  moisture_sensor.h  mqtt.c  mqtt.h  nvs_storage.c  nvs_storage.h  parameter.h  pump_control.c  pump_control.h  sensor_manager.c  sensor_manager.h  water_sensor.c  water_sensor.h
front/app/: angular.json  package-lock.json
front/app/src/: index.html  styles.css
front/app/src/app/: app.component.ts  app.routes.ts
front/app/src/app/auth/services/: Auth.ts
front/app/src/app/components/device/: device.component.css  device.component.html  device.component.ts
front/app/src/app/components/login/: login.component.ts  (+2 more)
front/app/src/app/exceptions/: AuthException.ts  DeviceException.ts
front/app/src/app/model/: Frequency.ts  Threshold.ts
frontend/app/: Dockerfile  angular.json  package.json
frontend/app/src/: index.html
frontend/app/src/app/: app.component.html
frontend/app/src/app/model/: Device.ts  User.ts
(+110 files in other folders)
